# hermod-system

./: README.md
bifrost/desktop/: CMakeLists.txt  Main.qml  main.cpp  resources.qrc
bifrost/desktop/include/: connection_manager.h  tcp_client.h  udp_listener.h
bifrost/desktop/src/: connection_manager.cpp  tcp_client.cpp  udp_listener.cpp
bifrost/desktop/ui/: yonerge.h  yorunge.cpp
bifrost/desktop/ui/pages/: ConnectPage.qml  DashboardPage.qml  EntryPage.qml  HermodPulsePage.qml  ManuelControlPage.qml  MonitoringPage.qml
bifrost/desktop/ui/views/: CustomButton.qml  CustomConnectionProgressBar.qml  NavigationMediator.qml  NavigationPillList.qml  TitleBarRoundButton.qml
polaris/polaris/: CMakeLists.txt  config.hcf  main.cpp
polaris/polaris/include/: config_manager.h  tcp_server.h  udp_broadcasting.h
polaris/polaris/src/: config_manager.cpp  tcp_server.cpp  udp_broadcasting.cpp
pulse/pulse/: CMakeLists.txt  main.c
pulse/pulse/include/: communication.h  communication_deprecated.h  default_pins.h  logging.h  shared_data.h
pulse/pulse/include/actuators/: blinker.h  brakes.h  inverter_rs485.h  power_cut.h  vesc6.h  vesc6_deprecated.h
pulse/pulse/include/control/: commands.h  communication.h  control.h  ring_buffer.h  usb_comm.h
pulse/pulse/include/cores/: core0.h  core1.h
pulse/pulse/include/sensors/: dht11.h  encoder_read.h  m365_register_map.h  mpu9250.h  navigation.h  ninebot.h  optics.h  optics_deprecated.h
pulse/pulse/src/: communication.c  communication_deprecated.c  shared_data.c
pulse/pulse/src/actuators/: blinker.c  brakes.c  inverter_rs485.c  power_cut.c  vesc6.c  vesc6_deprecated.c
pulse/pulse/src/assembly/: encoder_read.pio  optics_pin_read.pio
pulse/pulse/src/control/: commands.c  communication.c  control.c  ring_buffer.c  usb_comm.c
pulse/pulse/src/cores/: core0.c  core1.c
pulse/pulse/src/sensors/: dht11.c  encoder.c  mpu9250.c  ninebot.c  optics.c  optics_deprecated.c
pulse/pulse/test/: comm_test.py  test.py
